browser pings demo: wip

--- a/examples/browserPing/index.html
+++ b/examples/browserPing/index.html
@@ -1,12 +1,13 @@
 <html>
-    <script src="./index.js">
-    </script>
+<head>
+    <script src="./index.js"></script>
+</head>
 
-    <body>
-        <div>
-            Status:
+<body>
+    <div>
+        Status:
 
-            <span id="status">Disconnected</span>
-        </div>
-    </body>
+        <span id="status">Connecting...</span>
+    </div>
+</body>
 </html>
